--- a/solver/pom.xml
+++ b/solver/pom.xml
@@ -32,6 +32,11 @@
             <groupId>org.pitest</groupId>
             <artifactId>pitest-maven</artifactId>
             <version>1.1.8</version>
+            <configuration>
+              <excludedClasses>
+                <param>solver.ui.*</param>
+              </excludedClasses>
+            </configuration>
         </plugin>
         <plugin>
       <groupId>org.apache.maven.plugins</groupId>
