--- a/solver/pom.xml
+++ b/solver/pom.xml
@@ -34,7 +34,9 @@
             <version>1.1.8</version>
             <configuration>
               <excludedClasses>
+                <param>solver</param>
                 <param>solver.ui.*</param>
+                <param>solver.util.*</param>
               </excludedClasses>
             </configuration>
         </plugin>
